tests/errors/vector-index-known-length-copy-out-of-range.ari
fn main() -> i64 {
    var source: Vec[i64] = [1, 2, 3];
    source.truncate(1);
    let copied: Vec[i64] = source;
    return copied[1];
}
